--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -2,7 +2,10 @@
     position: relative;
     width: 420px;
     height: 450px;
-    background: seagreen;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .1);
+    backdrop-filter: blur(30px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
     border-radius: 10px;
     color: #fff;
     display: flex;
