--- a/src/index.css
+++ b/src/index.css
@@ -12,5 +12,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: slateblue;
+  background: url(./Components/assets/background.jpg)no-repeat;
+  background-size: cover;
+  background-position: center;
 }
